[gd_scene load_steps=20 format=3 uid="uid://chkpxlma0aw55"]

[ext_resource type="Script" uid="uid://cho7nraos4bbl" path="res://scripts/sound_tray.gd" id="1_4ujnp"]
[ext_resource type="FontFile" uid="uid://ct3wfruxrxodu" path="res://assets/fonts/vcr.ttf" id="2_22o1c"]
[ext_resource type="Script" uid="uid://bjv84e5xroc0x" path="res://scripts/conductor.gd" id="2_bftuc"]
[ext_resource type="Script" uid="uid://cp7qta543bjbg" path="res://scripts/chartloader.gd" id="3_h8r32"]
[ext_resource type="Script" uid="uid://d2bfyojd0n6qe" path="res://scripts/strum.gd" id="4_u8irc"]
[ext_resource type="Script" uid="uid://deerihrunli36" path="res://scripts/ratingmanager.gd" id="5_c3laj"]
[ext_resource type="Script" uid="uid://3iyi6826vxbf" path="res://scripts/fps.gd" id="6_jjc0p"]
[ext_resource type="AudioStream" uid="uid://dktsdbwv6i11n" path="res://assets/sound/volumeUp.ogg" id="8_5vx40"]
[ext_resource type="AudioStream" uid="uid://du4vndut2cfnj" path="res://assets/sound/volumeDown.ogg" id="9_albnk"]
[ext_resource type="Script" uid="uid://bhw74i8pfhv7v" path="res://scripts/score_text.gd" id="10_10ei3"]
[ext_resource type="Script" uid="uid://bsxf8cf765syp" path="res://scripts/time_text.gd" id="11_8xkrs"]

[sub_resource type="LabelSettings" id="LabelSettings_uuhas"]
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_13328"]
size = Vector2(100, 100)

[sub_resource type="LabelSettings" id="LabelSettings_g06ba"]
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_ovxpi"]
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_76sye"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_s2mf0"]
font = ExtResource("2_22o1c")
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_ifodx"]
font_size = 20
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_5sga6"]
font_size = 20
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="Scene" type="Node2D"]
metadata/_edit_horizontal_guides_ = []

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(640, 360)
ignore_rotation = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="Conductor" type="Node" parent="."]
script = ExtResource("2_bftuc")
offset = -80.0

[node name="ChartLoader" type="Node" parent="."]
script = ExtResource("3_h8r32")
song_name = "Lioness Pride"

[node name="FPS" type="Label" parent="."]
offset_left = 10.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 33.0
text = "0 FPS"
label_settings = SubResource("LabelSettings_uuhas")
script = ExtResource("6_jjc0p")

[node name="Strums" type="Node2D" parent="."]
position = Vector2(640, 0)

[node name="Strum0" type="Node2D" parent="Strums"]
position = Vector2(-180, 630)
script = ExtResource("4_u8irc")

[node name="Sprite2D" type="Sprite2D" parent="Strums/Strum0"]
texture = SubResource("PlaceholderTexture2D_13328")

[node name="Strum1" type="Node2D" parent="Strums"]
position = Vector2(-60, 630)
script = ExtResource("4_u8irc")
key = 70

[node name="Sprite2D" type="Sprite2D" parent="Strums/Strum1"]
texture = SubResource("PlaceholderTexture2D_13328")

[node name="Strum2" type="Node2D" parent="Strums"]
position = Vector2(60, 630)
script = ExtResource("4_u8irc")
key = 74

[node name="Sprite2D" type="Sprite2D" parent="Strums/Strum2"]
texture = SubResource("PlaceholderTexture2D_13328")

[node name="Strum3" type="Node2D" parent="Strums"]
position = Vector2(180, 630)
script = ExtResource("4_u8irc")
key = 75

[node name="Sprite2D" type="Sprite2D" parent="Strums/Strum3"]
texture = SubResource("PlaceholderTexture2D_13328")

[node name="RatingManager" type="Node2D" parent="."]
position = Vector2(640, 360)
script = ExtResource("5_c3laj")

[node name="RatingText" type="Label" parent="RatingManager"]
z_index = 3925
offset_left = -75.0
offset_top = -105.0
offset_right = 75.0
offset_bottom = -35.0
pivot_offset = Vector2(75, 70)
label_settings = SubResource("LabelSettings_g06ba")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="ComboText" type="Label" parent="RatingManager"]
z_index = 1220
offset_left = -75.0
offset_top = -35.0
offset_right = 75.0
offset_bottom = 35.0
pivot_offset = Vector2(75, 35)
label_settings = SubResource("LabelSettings_ovxpi")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="MsText" type="Label" parent="RatingManager"]
z_index = 3765
offset_left = -75.0
offset_top = 45.0
offset_right = 75.0
offset_bottom = 82.0
pivot_offset = Vector2(75, 0)
label_settings = SubResource("LabelSettings_76sye")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="SoundTray" type="Node2D" parent="."]
z_index = 4096
position = Vector2(560, -60)
script = ExtResource("1_4ujnp")

[node name="ColorRect" type="ColorRect" parent="SoundTray"]
offset_right = 160.0
offset_bottom = 60.0
color = Color(0, 0, 0, 0.501961)

[node name="Bars" type="Node2D" parent="SoundTray"]

[node name="Bar0" type="ColorRect" parent="SoundTray/Bars"]
offset_left = 20.0
offset_top = 28.0
offset_right = 28.0
offset_bottom = 30.0

[node name="Bar1" type="ColorRect" parent="SoundTray/Bars"]
offset_left = 32.0
offset_top = 26.0
offset_right = 40.0
offset_bottom = 30.0

[node name="Bar2" type="ColorRect" parent="SoundTray/Bars"]
offset_left = 44.0
offset_top = 24.0
offset_right = 52.0
offset_bottom = 30.0

[node name="Bar3" type="ColorRect" parent="SoundTray/Bars"]
offset_left = 56.0
offset_top = 22.0
offset_right = 64.0
offset_bottom = 30.0

[node name="Bar4" type="ColorRect" parent="SoundTray/Bars"]
offset_left = 68.0
offset_top = 20.0
offset_right = 76.0
offset_bottom = 30.0

[node name="Bar5" type="ColorRect" parent="SoundTray/Bars"]
offset_left = 80.0
offset_top = 18.0
offset_right = 88.0
offset_bottom = 30.0

[node name="Bar6" type="ColorRect" parent="SoundTray/Bars"]
offset_left = 92.0
offset_top = 16.0
offset_right = 100.0
offset_bottom = 30.0

[node name="Bar7" type="ColorRect" parent="SoundTray/Bars"]
offset_left = 104.0
offset_top = 14.0
offset_right = 112.0
offset_bottom = 30.0

[node name="Bar8" type="ColorRect" parent="SoundTray/Bars"]
offset_left = 116.0
offset_top = 12.0
offset_right = 124.0
offset_bottom = 30.0

[node name="Bar9" type="ColorRect" parent="SoundTray/Bars"]
offset_left = 128.0
offset_top = 10.0
offset_right = 136.0
offset_bottom = 30.0

[node name="Label" type="Label" parent="SoundTray"]
offset_top = 32.5
offset_right = 160.0
offset_bottom = 55.5
text = "Volume: 0%"
label_settings = SubResource("LabelSettings_s2mf0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="up_snd" type="AudioStreamPlayer" parent="SoundTray"]
stream = ExtResource("8_5vx40")

[node name="down_snd" type="AudioStreamPlayer" parent="SoundTray"]
stream = ExtResource("9_albnk")

[node name="ScoreText" type="Label" parent="."]
z_index = 4096
layout_direction = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = 100.0
offset_right = 1280.0
offset_bottom = 131.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(640, 15)
text = "Score: 0 \\ Misses: 0 \\ Accuracy: nan%"
label_settings = SubResource("LabelSettings_ifodx")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("10_10ei3")

[node name="TimeText" type="Label" parent="."]
z_index = 4096
offset_top = 687.0
offset_right = 1280.0
offset_bottom = 710.0
text = "0:00 / 3:00"
label_settings = SubResource("LabelSettings_5sga6")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("11_8xkrs")
